--- a/src/js/app.scss
+++ b/src/js/app.scss
@@ -2,6 +2,7 @@ body {
   border: 0;
   margin: 0;
   padding: 0;
+  font-family: Verdana, Geneva, sans-serif;
 }
 .app {
   display: flex;
@@ -9,14 +10,15 @@ body {
   &__header{
     display: flex;
     width: 100%;
-    height: 100px;
+    height: 60px;
     background-color: #ddd;
   }
   &__body{
     display: flex;
     width: 100%;
-    height: 100px;
-    background-color: #444;
+    height: 600px;
+    padding: 30px;
+    background-color: #ccc;
   }
   color: #f3d;
 }
