--- a/src/js/components/pay-credit-card/pay-credit-card.scss
+++ b/src/js/components/pay-credit-card/pay-credit-card.scss
@@ -1,4 +1,5 @@
 .pay-credit-card {
+  display: flex;
   background-color: #fff;
   width: 1024px;
   height: 596px;
@@ -34,5 +35,12 @@
     img {
       margin-right: 10px;
     }
+  }
+  &__form-container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 2;
+    padding: 50px;
+    padding-left: 168px;
   }
 }
