--- a/src/js/components/step-list/step-list.scss
+++ b/src/js/components/step-list/step-list.scss
@@ -2,6 +2,7 @@
   display: flex;
   font-size: 13px;
   justify-content: center;
+  margin-bottom: 74px;
   &__item {
     display: flex;
     color: #DE4B4B;
