--- a/src/js/components/pay-form-input-select/pay-form-input-select.scss
+++ b/src/js/components/pay-form-input-select/pay-form-input-select.scss
@@ -1,4 +1,4 @@
-.pay-input {
+.pay-select {
   display: flex;
   flex-direction: column;
   margin-bottom: 34px;
@@ -13,14 +13,15 @@
   &__label--visible {
     visibility: visible;
   }
-  &__input {
+  &__select {
     box-sizing: border-box;
     margin-bottom: 2px;
+    padding-left: 0;
     color: #C9C9C9;
     border: 0;
     border-bottom: 1px solid #C9C9C9;
     font-size: 17px;
-    line-height: 28px;
+    background-color: #fff;
     &:focus {
       outline: none;
     }
@@ -34,9 +35,8 @@
   &__alert {
     font-size: 13px;
     color: #EB5757;
-    visibility: hidden;
   }
-  &__alert--visible {
-    visibility: visible;
+  &__alert--invisible {
+    visibility: hidden;
   }
 }
