--- a/src/js/components/card-figure-undefined/card-figure-undefined.scss
+++ b/src/js/components/card-figure-undefined/card-figure-undefined.scss
@@ -1,13 +1,14 @@
 @import url(https://fonts.googleapis.com/css2?family=Lato:wght@600&display=swap);
 
-.card-figure {
+.card-figure-undefined {
   box-sizing: border-box;
   width: 365px;
   height: 224px;
   padding-top: 35px;
   padding-left: 33px;
-  background: transparent url('../../../../assets/Group 1603.svg') 0% 0% no-repeat padding-box;
+  background: transparent url('../../../../assets/Group 1735.svg') 0% 0% no-repeat padding-box;
   &__logo {
+    height: 27px;
     margin-bottom: 49px;
   }
   &__code {
@@ -32,6 +33,7 @@
     letter-spacing: 0.4px;
     color: #FFFFFF;
     text-shadow: 0px 1px 2px #000000B3;
+    text-transform: uppercase;
   }
   &__date {
     text-align: left;
