--- a/src/js/components/pay-form-input-select/pay-form-input-select.scss
+++ b/src/js/components/pay-form-input-select/pay-form-input-select.scss
@@ -17,7 +17,7 @@
     box-sizing: border-box;
     margin-bottom: 2px;
     padding-left: 0;
-    color: #C9C9C9;
+    color: #3C3C3C;
     border: 0;
     border-bottom: 1px solid #C9C9C9;
     font-size: 17px;
