--- a/src/js/components/pay-form-input/pay-form-input.scss
+++ b/src/js/components/pay-form-input/pay-form-input.scss
@@ -16,7 +16,7 @@
   &__input {
     box-sizing: border-box;
     margin-bottom: 2px;
-    color: #C9C9C9;
+    color: #3C3C3C;
     border: 0;
     border-bottom: 1px solid #C9C9C9;
     font-size: 17px;
