--- a/src/js/credit-card-checkout/card-figure-visa/card-figure-visa.scss
+++ b/src/js/credit-card-checkout/card-figure-visa/card-figure-visa.scss
@@ -32,6 +32,7 @@
     letter-spacing: 0.4px;
     color: #FFFFFF;
     text-shadow: 0px 1px 2px #000000B3;
+    text-transform: uppercase;
   }
   &__date {
     text-align: left;
