--- a/src/js/app.scss
+++ b/src/js/app.scss
@@ -16,9 +16,36 @@ body {
   &__body{
     display: flex;
     width: 100%;
-    height: 600px;
-    padding: 30px;
     background-color: #ccc;
   }
   color: #f3d;
+}
+@media only screen and (min-width: 1000px) {
+  .app {
+    &__header{
+
+    }
+    &__body{
+      display: flex;
+      width: 100%;
+      padding: 30px;
+      background-color: #ccc;
+    }
+    color: #f3d;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .app {
+
+    &__header{
+
+    }
+    &__body{
+      display: flex;
+      width: 100%;
+      padding: 0;
+      background-color: #ccc;
+    }
+    color: #f3d;
+  }
 }
