--- a/src/js/app.scss
+++ b/src/js/app.scss
@@ -7,16 +7,27 @@ body {
 .app {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  &__content {
+    max-width: 1040px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
   &__header{
     display: flex;
+    justify-content: center;
     width: 100%;
     height: 60px;
-    background-color: #ddd;
+    background-color: #fff;
   }
   &__body{
     display: flex;
+    justify-content: center;
+    align-items: flex-start;
     width: 100%;
-    background-color: #ccc;
+    height: 100vh;
+    background-color: #eee;
   }
   color: #f3d;
 }
@@ -29,9 +40,7 @@ body {
       display: flex;
       width: 100%;
       padding: 30px;
-      background-color: #ccc;
     }
-    color: #f3d;
   }
 }
 @media only screen and (max-width: 1000px) {
@@ -44,8 +53,6 @@ body {
       display: flex;
       width: 100%;
       padding: 0;
-      background-color: #ccc;
     }
-    color: #f3d;
   }
 }
