Adiciona estilo no componente PayFormSelect

--- a/src/js/credit-card-checkout/pay-form-input-select/pay-form-input-select.scss
+++ b/src/js/credit-card-checkout/pay-form-input-select/pay-form-input-select.scss
@@ -39,4 +39,20 @@
   &__alert--invisible {
     visibility: hidden;
   }
+  &__container {
+    display: flex;
+    flex-direction: column;
+  }
+  &__container--empty {
+    select {
+      color: #C9C9C9;
+    }
+  }
+  option {
+    color: #3C3C3C;
+  }
+  option[value="0"] {
+    color: #C9C9C9;
+  }
+  
 }
