Adiciona reorganização das pastas dos componentes

--- a/src/js/credit-card-checkout/card-figure-picker/card-figure-visa/card-figure-visa.scss
+++ b/src/js/credit-card-checkout/card-figure-picker/card-figure-visa/card-figure-visa.scss
@@ -6,7 +6,7 @@
   height: 224px;
   padding-top: 35px;
   padding-left: 33px;
-  background: transparent url('../../../../assets/Group 1603.svg') 0% 0% no-repeat padding-box;
+  background: transparent url('../../../../../assets/Group 1603.svg') 0% 0% no-repeat padding-box;
   &__logo {
     margin-bottom: 49px;
   }
