--- a/src/js/credit-card-checkout/card-figure-picker/card-figure-undefined/card-figure-undefined.scss
+++ b/src/js/credit-card-checkout/card-figure-picker/card-figure-undefined/card-figure-undefined.scss
@@ -6,7 +6,7 @@
   height: 224px;
   padding-top: 35px;
   padding-left: 33px;
-  background: transparent url('../../../../assets/Group 1735.svg') 0% 0% no-repeat padding-box;
+  background: transparent url('../../../../../assets/Group 1735.svg') 0% 0% no-repeat padding-box;
   &__logo {
     height: 27px;
     margin-bottom: 49px;
