--- a/src/js/credit-card-checkout/card-figure-picker/card-figure-back/card-figure-back.scss
+++ b/src/js/credit-card-checkout/card-figure-picker/card-figure-back/card-figure-back.scss
@@ -1,13 +1,14 @@
-@import url(https://fonts.googleapis.com/css2?family=Cousine:wght@400&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Lato:wght@600&display=swap);
 
-.card-figure-visa {
+.card-figure-back {
   box-sizing: border-box;
   width: 365px;
   height: 224px;
   padding-top: 35px;
   padding-left: 33px;
-  background: transparent url('../../../../../assets/Group 1603.svg') 0% 0% no-repeat padding-box;
+  background: transparent url('../../../../../assets/Group 433.svg') 0% 0% no-repeat padding-box;
   &__logo {
+    height: 27px;
     margin-bottom: 49px;
   }
   &__code {
@@ -15,7 +16,7 @@
     margin-bottom: 33px;
     text-align: left;
     font-size: 23px; 
-    font-family: 'Cousine', monospace;
+    font-family: 'Lato', sans-serif;;
     letter-spacing: 1.8px;
     color: #FFFFFF;
     text-shadow: 0px 1px 2px #000000B3;
@@ -28,7 +29,7 @@
   &__people {
     text-align: left;
     font-size: 16px; 
-    font-family: 'Cousine', monospace;
+    font-family: 'Lato', sans-serif;
     letter-spacing: 0.4px;
     color: #FFFFFF;
     text-shadow: 0px 1px 2px #000000B3;
@@ -36,7 +37,7 @@
   }
   &__date {
     text-align: left;
-    font-family: 'Cousine', monospace;
+    font-family: 'Lato', sans-serif;
     letter-spacing: 0.4px;
     color: #FFFFFF;
     text-shadow: 0px 1px 2px #000000B3;
