--- a/src/js/credit-card-checkout/card-figure-picker/card-figure-undefined/card-figure-undefined.scss
+++ b/src/js/credit-card-checkout/card-figure-picker/card-figure-undefined/card-figure-undefined.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css2?family=Lato:wght@600&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Cousine:wght@400&display=swap);
 
 .card-figure-undefined {
   box-sizing: border-box;
@@ -15,9 +15,9 @@
     width: 299px;
     margin-bottom: 33px;
     text-align: left;
-    font-size: 24px; 
-    font-family: 'Lato', sans-serif;;
-    letter-spacing: 3.0px;
+    font-size: 23px; 
+    font-family: 'Cousine', monospace;
+    letter-spacing: 1.8px;
     color: #FFFFFF;
     text-shadow: 0px 1px 2px #000000B3;
   }
@@ -29,7 +29,7 @@
   &__people {
     text-align: left;
     font-size: 16px; 
-    font-family: 'Lato', sans-serif;
+    font-family: 'Cousine', monospace;
     letter-spacing: 0.4px;
     color: #FFFFFF;
     text-shadow: 0px 1px 2px #000000B3;
@@ -37,7 +37,7 @@
   }
   &__date {
     text-align: left;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Cousine', monospace;
     letter-spacing: 0.4px;
     color: #FFFFFF;
     text-shadow: 0px 1px 2px #000000B3;
